# RecEmotion

./: .gitignore  .gitmodules  README.md  check_alignment.sh  gradle.properties  now_goal.md  settings.gradle.kts  検証用アプリについて .md
app/: build.gradle.kts
app/src/androidTest/java/com/example/recemotion/: ExampleInstrumentedTest.kt
app/src/main/: 2026-02-19-140856-compassartifactwf-f5a3e7d7-7b75-4710-b1bc-a21bb.txt  AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  cabocha_jni.cpp  iconv_stub.cpp  llama_jni.cpp
app/src/main/cpp/mecab/src/: config.h  utils.h
app/src/main/java/com/example/recemotion/: CalendarFragment.kt  FaceLandmarkerHelper.kt  LLMInferenceHelper.kt  MainActivity.kt  MainScreenFragment.kt  MessageSendWorker.kt  ModelDownloadHelper.kt  TestLLMInference.kt
app/src/main/java/com/example/recemotion/data/db/: AppDatabase.kt  ThoughtAnalysisDao.kt  ThoughtAnalysisEntity.kt  ThoughtEntryDao.kt  ThoughtEntryEntity.kt
app/src/main/java/com/example/recemotion/data/llm/: LlmStreamEvent.kt  ThoughtAnalysisJsonParser.kt  ThoughtPromptBuilder.kt
app/src/main/java/com/example/recemotion/data/parser/: CabochaDependencyParser.kt  CabochaModelManager.kt  CabochaResult.kt  CabochaThoughtMapper.kt  DependencyParser.kt  DictionaryManager.kt  LogicalFlowAnalyzer.kt  LogicalFlowQuestionGenerator.kt  LogicalFlowReportBuilder.kt  NativeCabochaParser.kt  ParserComparisonLogger.kt
app/src/main/java/com/example/recemotion/data/repository/: ThoughtRepository.kt
app/src/main/java/com/example/recemotion/data/serialization/: ThoughtStructureJsonAdapter.kt
app/src/main/java/com/example/recemotion/domain/model/: BiasDetection.kt  LogicalFlowModels.kt  MissingPerspective.kt  ThoughtAnalysisResult.kt  ThoughtNode.kt  ThoughtStructure.kt
app/src/main/java/com/example/recemotion/domain/usecase/: AnalyzeThoughtUseCase.kt
app/src/main/java/com/example/recemotion/presentation/: ThoughtAnalysisUiState.kt  ThoughtAnalysisViewModel.kt
app/src/main/res/layout/: activity_main.xml  fragment_calendar.xml  fragment_main_screen.xml
app/src/main/res/menu/: nav_drawer_menu.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/rust/: Cargo.toml
app/src/main/rust/src/: core.rs  lib.rs  main.rs
app/src/main/rust/src/facs/: calibration.rs  features.rs  landmarks.rs  mod.rs
app/src/test/java/com/example/recemotion/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
test/giron/: edge_llm_test.py  lmstudio_test.py  output.md  output2.md  output3-liquid_lfm2.5-1.2b.md  output4-liquid_lfm2.5-1.2b.md  output5-gemma3-1b.md  output6-gemma3-1b.md  output7-liquid_lfm2.5-1.2b.md  output8-liquid_lfm2.5-1.2b.md  output9-gpt-oss-20b.md  topic_change_cabocha.py  use.py
understand_memo/: button_call.md  実行順序について.md
