[package]
name = "recemotion"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "recemotion-cli"
path = "src/main.rs"

[dependencies]
jni = "0.21"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] } # CLI server might still use tokio
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"
lazy_static = "1.4"
chrono = "0.4"
android_logger = "0.13"
log = "0.4"
